2000-05-07  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-folder.c (mbox_get_message_by_uid):
	Dont unref the stream, because of the broken(tm) ref model of gtk
	widget that for some odd reason is being perpetuated in camel.	

2000-05-07    <notzed@helixcode.com>

	* camel-mime-filter.c (filter_run): Oops, forgot to add the
	backlen to the pre-buffer (*poof*).

2000-05-07  NotZed  <NotZed@HelixCode.com>

	* camel-mime-message.c (construct_from_parser): Allow
	HSCAN_FROM_END to terminate the processing of a message.

	* camel-folder-summary.c (perform_content_info_load): Ick, dont
	try and append a node onto its own list.
	(camel_folder_summary_clear): Actually clear the indexes after
	we've removed the messages.
	(camel_folder_summary_clear): Set dirty if it changes.
	(camel_folder_summary_load): Clear dirty.
	(camel_folder_summary_save): Only save if dirty.

	* providers/mbox/camel-mbox-summary.c (summary_header_load): Oops,
	remember to call that parent class first ...
	(summary_header_save): Here too.
	(camel_mbox_summary_load): Do more checking to verify the index
	contents as well as teh summary contents, against the mbox
	contents.
	(camel_mbox_summary_load): Removed some fo that checking, it needs
	more code to work reliably.

2000-05-07    <notzed@helixcode.com>

	* providers/mbox/camel-mbox-summary.c (camel_mbox_summary_load):
	Set the size and mtime of the mbox we indexed once done.

	* camel-folder-summary.c (camel_folder_summary_set_index): Dont
	write the index if it changes - let the claler fix it (uh, kind of
	impacts performance).
	(camel_folder_summary_load): close in.

	* camel-folder-summary.c (summary_format_string): Check header
	exists before trying to strip its leading spaces.

2000-05-06  NotZed  <NotZed@HelixCode.com>

	* camel-folder.h: Removed summary info from here, and include
	camel-folder-summary.h as well.
	
	* camel-mime-parser.c (camel_mime_parser_step): Allow it to accept
	a NULL databuffer.
